--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .dyra {
-    
+    color: #2e2f42;
 }
 
 .theme {
@@ -38,4 +38,19 @@ footer {
     letter-spacing: 0.02em;
     color: #F4F4FD;
     line-height: 1.5;
+}
+
+button {
+    display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: row;
+        gap: 10px;
+        border-radius: 4px;
+            padding: 16px 32px;
+            width: 169px;
+            height: 56px;
+            box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+            background: #4d5ae5;
+
 }
