--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ button {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    text-align: center;
     color: #fff;
 }
 
@@ -84,6 +85,8 @@ button {
 .section-title {
     font-size: 36px;
     line-height: 1.11;
+    text-align: center;
+    text-transform: capitalize;
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
